fixed overflowing with table, design corrections

--- a/src/app/orders/orders.style.scss
+++ b/src/app/orders/orders.style.scss
@@ -3,8 +3,23 @@
 @import "../../../node_modules/bootstrap/scss/mixins";
 @import "../../../node_modules/nvd3/build/nv.d3";
 
-.orders tr {
+.table-orders tr {
   cursor: pointer;
+}
+
+.table-orders {
+  min-width: 600px;
+}
+
+@media (min-width: 1200px) and (max-width: 1450px) {
+  .orders-container, .chart-container {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+.table-orders-container {
+  overflow-x: auto;
 }
 
 td, th {
@@ -24,13 +39,13 @@ td, th {
 }
 
 .order-type-buy {
-  color: #0D3349;
-  font-weight: bold;
+  color: $brand-info;
+  font-weight: 600;
 }
 
 .order-type-sell {
-  color: #2aa198;
-  font-weight: bold;
+  color: $brand-warning;
+  font-weight: 600;
 }
 
 .filter-active {
@@ -48,12 +63,12 @@ td, th {
   font-size: $font-size-sm;
   text-align: center;
 
-  p{
+  p {
     margin: 0;
     padding: 0;
   }
 
-  h3{
+  h3 {
     background: none;
     border-bottom: 0;
   }
@@ -77,16 +92,16 @@ svg .title {
   stroke-opacity: 0;
 }
 
-.nv-controlsWrap{
+.nv-controlsWrap {
 
-  .nv-legend-symbol{
+  .nv-legend-symbol {
     fill: #666 !important;
     stroke: #666 !important;
   }
 }
 
 .active {
-  background-color: rgba(65,117,171, 0.3);
+  background-color: rgba(65, 117, 171, 0.3);
 }
 
 g.nv-group {
